--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-    <h1>Happy Rose Day, My Love! ❤️</h1>
+    <h1>Happy valentines week ashi! ❤️</h1>
     <img id="rose" src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Red_rose.JPG" alt="Rose" onclick="revealMessage()">
     <p id="message">You are the most beautiful rose in my garden of life. 🌹</p>
     
