--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <h1>Happy valentines week ashi! ❤️</h1>
     <img id="rose" src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Red_rose.JPG" alt="Rose" onclick="revealMessage()">
-    <p id="message">You are the most beautiful rose in my garden of life. 🌹</p>
+    <p id="message">push, commit, clone my ass. 🌹</p>
     
     <audio id="song" src="https://www.soundjay.com/button/beep-07.wav"></audio>
 
